# readme-test

./: LICENSE  README.md  readme-test.cabal  stack.yaml
app/: Main.hs
drivers/: ruby
samples/: simple.rb
src/: Main.hs
src/Test/: ReadmeTest.hs
src/Test/ReadmeTest/: Internal.hs
test/Test/: ReadmeTestSpec.hs
