Name:                   readme-test
Version:                0.0.0
Author:                 Yuji Yamamoto <whosekiteneverfly@gmail.com>
Maintainer:             Yuji Yamamoto <whosekiteneverfly@gmail.com>
License:                BSD3
License-File:           LICENSE
Synopsis:               Language-agnostic doctest.
Description:            Language-agnostic doctest.
Cabal-Version:          >= 1.10
Build-Type:             Simple

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      Test.ReadmeTest
  Other-Modules:        Test.ReadmeTest.Internal
  Build-Depends:        base >= 4 && < 5

Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       src
                      , test
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Build-Depends:        base
                      , hspec

Source-Repository head
  Type:                 git
  Location:             https://github.com/igrep/readme-test
