Name:                   readme-test
Version:                0.0.0
Author:                 Yuji Yamamoto <whosekiteneverfly@gmail.com>
Maintainer:             Yuji Yamamoto <whosekiteneverfly@gmail.com>
License:                BSD3
License-File:           LICENSE
Synopsis:               Language-agnostic doctest.
Description:            Language-agnostic doctest.
Cabal-Version:          >= 1.10
Build-Type:             Simple

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      Test.ReadmeTest
  Other-Modules:        Test.ReadmeTest.Internal
  Build-Depends:        base >= 4 && < 5
                      , conduit-extra == 1.*
                      , conduit == 1.*
                      , async == 2.*
                      , transformers
                      , bytestring
                      , resourcet

executable readme-test
  Main-Is:              Main.hs
  Hs-Source-Dirs:       src
  GHC-Options:          -Wall
  Build-Depends:        base >= 4 && < 5
                      , conduit-extra == 1.*
                      , conduit == 1.*
                      , async == 2.*
                      , bytestring
                      , transformers
                      , resourcet
                      , readme-test

Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       src
                      , test
  Ghc-Options:          -Wall -threaded
  Main-Is:              Spec.hs
  Build-Depends:        base
                      , hspec

Source-Repository head
  Type:                 git
  Location:             https://github.com/igrep/readme-test
