cabal-version:          2.4
name:                   readme-test
version:                0.1.1
author:                 YAMAMOTO Yuji <whosekiteneverfly@gmail.com>
maintainer:             YAMAMOTO Yuji <whosekiteneverfly@gmail.com>
copyright:              2020 YAMAMOTO Yuji
license:                Apache-2.0
license-file:           LICENSE
homepage:               https://github.com/igrep/readme-test
category:               Test
synopsis:               Language-agnostic doctest.
description:            Language-agnostic doctest.
build-type:             Simple

common common
  build-depends:       base >= 4.7 && < 5
                     , exceptions
                     , mtl
                     , text
  default-language:    Haskell2010

common common-executable
  build-depends:       readme-test
  ghc-options:         -threaded -rtsopts

library
  import:               common
  hs-source-dirs:       src
  ghc-options:          -Wall
  exposed-modules:      Test.ReadmeTest
  other-modules:        Test.ReadmeTest.Internal
  build-depends:        bytestring
                      , errors
                      , filepath
                      , generic-lens
                      , microlens
                      , microlens-mtl
                      , regex
                      , typed-process

executable readme-test
  import:               common, common-executable
  main-is:              Main.hs
  hs-source-dirs:       app
  ghc-options:          -Wall -threaded
  build-depends:        base >= 4 && < 5

test-suite readme-test-spec
  import:               common, common-executable
  type:                 exitcode-stdio-1.0
  hs-source-dirs:       test
  ghc-options:          -Wall -threaded
  main-is:              Spec.hs
  other-modules:        Test.ReadmeTestSpec
  build-depends:        base
                      , hspec
                      , QuickCheck

source-repository head
  type:                 git
  location:             https://github.com/igrep/readme-test
